# android_kernel_motorola_sm7325

./: .gitignore  Android.mk  AndroidKernelModule.mk  Kbuild  kona-camera-sensor-ifb.dtsi  lahaina-camera-sensor-mot-banks-overlay.dtsi  lahaina-camera-sensor-mot-dubai-overlay.dtsi  lahaina-camera-sensor-mot-tundra-overlay.dtsi  lahaina-camera-sensor-mot-xpeng-overlay.dtsi  yupik-camera-sensor-mot-berlin-overlay.dtsi  yupik-camera-sensor-mot-berlna-overlay.dtsi  yupik-camera-sensor-mot-dubai-overlay.dtsi
android/: abi_gki_aarch64_qcom
arch/arm64/: Kconfig
asoc/: Kbuild  lahaina.c  msm-dai-fe.c  msm-dai-q6-v2.c  msm-pcm-routing-v2.c  msm-pcm-routing-v2.h  msm_dailink.h
asoc/codecs/: Kbuild  (+2 more)
config/: gki_lahainadisp.conf  gki_lahainadispconf.h  holicamera.conf  holicameraconf.h  konadisp.conf  lahainadisp.conf  lahainadispconf.h
drivers/: Kconfig  Makefile  camera_main.c  camera_main.h
drivers/moto_sched/: Android.mk  BUILD.bazel  Kbuild  Kconfig  msched_common.c  msched_common.h  msched_main.c  msched_sysfs.c  msched_sysfs.h
drivers/moto_sched/locking/: futex.c  locking_main.c  locking_main.h  mutex.c  rwsem.c
dsp/: Kbuild  q6adm.c  q6afe.c
init/: main.c
mm/: memcontrol.c  memory.c  page_alloc.c  vmscan.c
msm/: Makefile  msm_drv.c  msm_drv.h  msm_kms.h  sde_dsc_helper.c  sde_edid_parser.c
qcom/: blair-cdp-overlay.dts  blair-mtp-nopmi-overlay.dts  blair-mtp-usbc-overlay.dts  blair-qrd-nopmi-overlay.dts  blairp-atp-overlay.dts  blairp-mtp-nopmi-overlay.dts  carrier-channel-ids.dtsi  sdxlemur.dtsi  yupik-dubai-touchscreen-overlay.dtsi  yupik.dtsi
(+642 files in other folders)
